all complete except bonus question

--- a/term1week7.ipynb
+++ b/term1week7.ipynb
@@ -2370,7 +2370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 70,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2416,7 +2416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 71,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2452,7 +2452,7 @@
        "3"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2484,7 +2484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 73,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2526,7 +2526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 74,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2562,7 +2562,7 @@
        "3"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2604,7 +2604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 76,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2648,7 +2648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2664,7 +2664,30 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Function does not work correctly for n = 12\n",
+      "Function does not work correctly for n = 7\n",
+      "Function does not work correctly for n = 70\n",
+      "0 out of 3 tests passed\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "All tests failed!!",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[77], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m test1 \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m7\u001b[39m,\u001b[38;5;28;01mFalse\u001b[39;00m) \u001b[38;5;66;03m# No triple exists with total 7\u001b[39;00m\n\u001b[0;32m      5\u001b[0m test2 \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m70\u001b[39m,\u001b[38;5;28;01mTrue\u001b[39;00m) \u001b[38;5;66;03m# A triple exists with total 70\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m question4(_globals, test0, test1, test2)\n",
+      "File \u001b[1;32m~\\OneDrive\\Documents\\GitHub\\term1-week7-vincentmccabe\\autograder_term1week7.py:449\u001b[0m, in \u001b[0;36mquestion4\u001b[1;34m(_globals, test0, test1, test2)\u001b[0m\n\u001b[0;32m    447\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m score\n\u001b[0;32m    448\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m: \n\u001b[1;32m--> 449\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAll tests failed!!\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mAssertionError\u001b[0m: All tests failed!!"
+     ]
+    }
+   ],
    "source": [
     "# 1 Mark\n",
     "\n",
